Bug 78432 - FILESEAVE: DOCX: File gets corrupt after Roundtrip
Summary: FILESEAVE: DOCX: File gets corrupt after Roundtrip
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: pallavi.jadhav
URL:
Whiteboard: target:4.3.0
Keywords:
: 78438 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-05-08 12:43 UTC by pallavi.jadhav
Modified: 2014-05-16 09:57 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Contains floating drawing objects (162.65 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-05-08 12:43 UTC, pallavi.jadhav
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pallavi.jadhav 2014-05-08 12:43:22 UTC
Created attachment 98678 [details]
Contains floating drawing objects

Steps to Reproduce:
1] Open attached document in LibreOffice
2] Perform save_as to DOCX
3] Open saved file in MS Office-2010

Current result :
File gets corrupt after Roundtrip.

Expected result :
File should get open without corruption after Roundtripped.

Issue :
In RT, in document.xml,
<wp:posOffset> has value greater than 2147483647.
Where 2147483647 indicates maximum value of int.
Absolute Position Offset Value has value of type Int. Hence no value should exceed the maximum limit of Int.
Please refer : http://www.schemacentral.com/sc/xsd/t-xsd_int.html
Comment 1 Yogesh Bharate 2014-05-09 05:44:29 UTC
*** Bug 78438 has been marked as a duplicate of this bug. ***
Comment 2 Jorendc 2014-05-09 21:00:56 UTC
Repro, tested using windows 8.1 with LibreOffice Version: 4.3.0.0.alpha1+
Build ID: e9b2787c2ece4c8260fbac6359257e1829c917d4
TinderBox: Win-x86@39, Branch:master, Time: 2014-05-09_06:36:37

Kind regards,
Joren
Comment 3 Commit Notification 2014-05-16 09:05:21 UTC
Pallavi Jadhav committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a05e5016287fdf06378e8b854a40db32d2da7204

fdo#78432 : DOCX: File gets  corrupt after RoundTrip



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.