fdo#78432 : DOCX: File gets  corrupt after RoundTrip

Issue :
	- In RT in document.xml, value of Absolute Position Offset
	<wp:posOffset> was going out of bounds.
	- <wp:posOffset> is of type Int(32-bits), hence it's value
	should not cross the MAX and MIN limits of Int.

	Implementation :
	- Added check for <wp:posOffset> should not cross
	Maximum/Minimum limit of Int.
	- Written Export Unit test case.

Reviewed on:
	https://gerrit.libreoffice.org/9328

Change-Id: I22e75d7e603ebbf6a49e764fb1a3e6a4d2fd8b23